fixed grid some bugs

--- a/Rubik.HTML/Content/Rubik.css
+++ b/Rubik.HTML/Content/Rubik.css
@@ -292,18 +292,37 @@ ul, ol
 {
 }
 
-    .Grid > .Panel
+    .Grid .Panel
     {
         top: 0px;
         right: auto;
         bottom: auto;
         left: 0px;
         width: auto;
-        height: auto;
-        overflow: auto;
+        height: auto;        
     }
 
-    
+.GridCell {
+    border: solid;
+    border-color: rgb(192,192,192);
+    border-top-width: 0px;
+    border-left-width: 0px;
+    border-bottom-width: 1px;
+    border-right-width: 1px;
+    text-align: right;
+    text-overflow:ellipsis;
+}
+
+.GridScrollPanel {
+    overflow: auto;
+}
+
+.GridCell-content {
+    white-space: nowrap;
+    font-size: 13px;
+}
+
+
 
 
 .Expandable
