--- a/Rubik.HTML/Content/Rubik.css
+++ b/Rubik.HTML/Content/Rubik.css
@@ -313,6 +313,30 @@ ul, ol
     text-overflow:ellipsis;
 }
 
+.GridRowHeaderCell {
+    border: solid;
+    border-color: rgb(192,192,192);
+    border-top-width: 1px;
+    border-left-width: 1px;
+    border-bottom-width: 0px;
+    border-right-width: 0px;
+    text-align: left;
+    text-overflow:ellipsis;
+}
+
+.GridColHeaderCell {
+    border: solid;
+    border-color: rgb(192,192,192);
+    border-top-width: 0px;
+    border-left-width: 0px;
+    border-bottom-width: 1px;
+    border-right-width: 1px;
+    text-align: left;
+    text-overflow:ellipsis;
+}
+
+
+
 .GridScrollPanel {
     overflow: auto;
 }
