--- a/Rubik.HTML/Content/Rubik.css
+++ b/Rubik.HTML/Content/Rubik.css
@@ -313,6 +313,15 @@ ul, ol
     text-overflow:ellipsis;
 }
 
+.GridRowsHeaderPanel {
+    border: solid;
+    border-color: rgb(192,192,192);
+    border-top-width: 1px;
+    border-left-width: 1px;
+    border-bottom-width: 0px;
+    border-right-width: 0px;
+}
+
 .GridRowHeaderCell {
     border: solid;
     border-color: rgb(192,192,192);
