--- a/Rubik.HTML/Content/Rubik.css
+++ b/Rubik.HTML/Content/Rubik.css
@@ -313,25 +313,15 @@ ul, ol
     text-overflow:ellipsis;
 }
 
-.GridRowsHeaderPanel {
+.GridColsHeaderPanel {
     border: solid;
     border-color: rgb(192,192,192);
-    border-top-width: 1px;
-    border-left-width: 1px;
+    border-top-width: 0px;
+    border-left-width: 0px;
     border-bottom-width: 0px;
     border-right-width: 0px;
 }
 
-.GridRowHeaderCell {
-    border: solid;
-    border-color: rgb(192,192,192);
-    border-top-width: 1px;
-    border-left-width: 1px;
-    border-bottom-width: 0px;
-    border-right-width: 0px;
-    text-align: left;
-    text-overflow:ellipsis;
-}
 
 .GridColHeaderCell {
     border: solid;
@@ -343,6 +333,37 @@ ul, ol
     text-align: left;
     text-overflow:ellipsis;
 }
+
+
+.GridRowsHeaderPanel {
+    border: solid;
+    border-color: rgb(192,192,192);
+    border-top-width: 0px;
+    border-left-width: 0px;
+    border-bottom-width: 0px;
+    border-right-width: 0px;
+}
+
+.GridRowHeaderCell {
+    border: solid;
+    border-color: rgb(192,192,192);
+    border-top-width: 0px;
+    border-left-width: 0px;
+    border-bottom-width: 1px;
+    border-right-width: 1px;
+    text-align: left;
+    text-overflow:ellipsis;
+}
+
+.GridFirstColHeaderCell {    
+    border-left-width: 1px !important;    
+}
+
+.GridFirstRowHeaderCell {    
+    border-top-width: 1px !important;    
+}
+
+
 
 
 
