--- a/Rubik.HTML/Content/Rubik.css
+++ b/Rubik.HTML/Content/Rubik.css
@@ -292,26 +292,17 @@ ul, ol
 {
 }
 
-    .Grid .Panel
-    {
-        top: 0px;
-        right: auto;
-        bottom: auto;
-        left: 0px;
-        width: auto;
-        height: auto;        
-    }
-
-.GridCell {
-    border: solid;
-    border-color: rgb(192,192,192);
-    border-top-width: 0px;
-    border-left-width: 0px;
-    border-bottom-width: 1px;
-    border-right-width: 1px;
-    text-align: right;
-    text-overflow:ellipsis;
+.Grid .Panel
+{
+    top: 0px;
+    right: auto;
+    bottom: auto;
+    left: 0px;
+    width: auto;
+    height: auto;        
 }
+
+
 
 .GridColsHeaderPanel {
     border: solid;
@@ -322,6 +313,21 @@ ul, ol
     border-right-width: 0px;
 }
 
+.GridRowsHeaderPanel {
+    border: solid;
+    border-color: rgb(192,192,192);
+    border-top-width: 0px;
+    border-left-width: 0px;
+    border-bottom-width: 0px;
+    border-right-width: 0px;
+}
+
+.GridCellsPanel {   
+}
+
+.GridScrollPanel {
+    overflow: auto;
+}
 
 .GridColHeaderCell {
     border: solid;
@@ -335,48 +341,136 @@ ul, ol
 }
 
 
-.GridRowsHeaderPanel {
+.GridRowHeaderCell {    
+}
+
+.GridFirstColHeaderCell {    
+    /*border-left-width: 1px !important; */
+}
+
+.GridFirstRowHeaderCell {        
+    /*border-top-width: 1px !important;*/
+}
+
+.GridLastColHeaderCell {    
+    border-right-width: 1px !important;    
+}
+
+.GridLastRowHeaderCell {        
+    border-bottom-width: 1px !important;
+}
+
+.GridLastColCell {    
+    border-right-width: 1px !important;    
+}
+
+.GridLastRowCell {        
+    border-bottom-width: 1px !important;
+}
+
+.GridHeaderCell {
     border: solid;
     border-color: rgb(192,192,192);
     border-top-width: 0px;
     border-left-width: 0px;
     border-bottom-width: 0px;
     border-right-width: 0px;
-}
-
-.GridRowHeaderCell {
-    border: solid;
-    border-color: rgb(192,192,192);
-    border-top-width: 0px;
-    border-left-width: 0px;
-    border-bottom-width: 1px;
-    border-right-width: 1px;
     text-align: left;
     text-overflow:ellipsis;
 }
 
-.GridFirstColHeaderCell {    
-    border-left-width: 1px !important;    
+.GridHeaderCell-content {
+    border: solid;
+    border-color: rgb(192,192,192);
+    border-top-width: 1px;
+    border-left-width: 1px;
+    border-bottom-width: 0px;
+    border-right-width: 0px;
+    text-align: left;
+    text-overflow:ellipsis;
+    width: auto;
+    overflow: hidden;
 }
 
-.GridFirstRowHeaderCell {    
-    border-top-width: 1px !important;    
+.GridHeaderCell-text {
+    white-space: nowrap;
+    font-size: 13px;    
 }
 
+.GridHeaderCell-indent {
+    width: 20px;
+    height: 100%;
+    float: left;
+    border: solid;
+    border-color: rgb(192,192,192);
+    border-top-width: 0px;
+    border-left-width: 1px;
+    border-bottom-width: 0px;
+    border-right-width: 0px;
+    white-space: nowrap;    
+}
 
+.GridHeaderCell-expandstate {
+    cursor: default;
+    font-size: 16px!important;
+    height: 16px;
+    width: 10px;
+    margin-left: 3px;
+    margin-right: 3px;
+    opacity: .6;
+}
 
-
-
-.GridScrollPanel {
-    overflow: auto;
+.GridCell {
+    border: solid;
+    border-color: rgb(192,192,192);
+    border-top-width: 0px;
+    border-left-width: 0px;
+    border-bottom-width: 0px;
+    border-right-width: 0px;
+    text-align: right;
+    text-overflow:ellipsis;
 }
 
 .GridCell-content {
+    border: solid;
+    border-color: rgb(192,192,192);
+    border-top-width: 1px;
+    border-left-width: 1px;
+    border-bottom-width: 0px;
+    border-right-width: 0px;
+    text-align: right;
+    text-overflow:ellipsis;
+}
+
+.GridCell-text {
     white-space: nowrap;
-    font-size: 13px;
+    font-size: 13px;    
+}
+
+.GridCell-indent {
+    width: 20px;
+    height: 100%;
+    float: left;
+    border: solid;
+    border-color: rgb(192,192,192);
+    border-top-width: 0px;
+    border-left-width: 0px;
+    border-bottom-width: 0px;
+    border-right-width: 0px;
+    white-space: nowrap;    
+}
+
+.GridRowHeaderCell .GridCell-content {      
+    text-align: left;
+    text-overflow:ellipsis;
+    width: auto;
+    overflow: hidden;
 }
 
 
+.GridNoBorder .GridHeaderCell, .GridNoBorder .GridHeaderCell-content,  .GridNoBorder .GridHeaderCell-indent,  .GridNoBorder .GridCell,  .GridNoBorder .GridCell-content {
+    border: none !important;
+}
 
 
 .Expandable
