--- a/Rubik.HTML/Content/Rubik.css
+++ b/Rubik.HTML/Content/Rubik.css
@@ -551,12 +551,12 @@ ul, ol
     left: 0px;
     width: 100%;
     height: 100%;      
-    background-color: rgba(0,0,0,0.2);    
+    background-color: rgb(252,252,252);
+    cursor:wait;
 }
 
     .LoadingPanel .LoadingMessage 
-    {
-        background-color: white;        
+    {        
         position: absolute;        
         height: 60px;
         width: 200px;    
@@ -2240,6 +2240,15 @@ ul, ol
 
 .PivotArea-content.dropenabled {
     border-color: gold;    
+}
+
+.PivotAreaItem {
+    border-style: solid;
+    border-color:transparent;
+}
+
+.PivotArea-content.dropenabled .PivotAreaItem:hover {    
+    border-top-color:black;
 }
 
 .PivotAreaItem-content {
